--- a/mergedServices/mergedServices.csproj
+++ b/mergedServices/mergedServices.csproj
@@ -66,13 +66,13 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="answerGenerator.cs" />
-    <Compile Include="CompareWithOnePredicateClass.cs" />
-    <Compile Include="CompareWithOnePredicateInterface.cs" />
-    <Compile Include="Comparison.cs" />
-    <Compile Include="ComparisonServiceClass.cs" />
-    <Compile Include="ComparisonServiceInterface.cs" />
-    <Compile Include="entity.cs" />
+    <Compile Include="Q&amp;A\answerGenerator.cs" />
+    <Compile Include="ComparisonOnePredicate\CompareWithOnePredicateServiceClass.cs" />
+    <Compile Include="ComparisonOnePredicate\CompareWithOnePredicateServiceInterface.cs" />
+    <Compile Include="Comparison\Comparison.cs" />
+    <Compile Include="Comparison\ComparisonServiceClass.cs" />
+    <Compile Include="Comparison\ComparisonServiceInterface.cs" />
+    <Compile Include="Relation\RelationEntity.cs" />
     <Compile Include="Hatem\Entity.cs" />
     <Compile Include="Hatem\FullProfile.cs" />
     <Compile Include="Hatem\imageGrapper.cs" />
@@ -82,33 +82,33 @@
     <Compile Include="Hatem\ProfileConstructorInterface.cs" />
     <Compile Include="Hatem\ProfileConstructorService.cs" />
     <Compile Include="Hatem\RelationGenerator.cs" />
-    <Compile Include="keywordSearchServiceClass.cs" />
-    <Compile Include="keywordSearchServiceInterface.cs" />
-    <Compile Include="KwSearch.cs" />
-    <Compile Include="Language.cs" />
-    <Compile Include="Lexicon.cs" />
-    <Compile Include="LexiconLiteral.cs" />
-    <Compile Include="LexiconPredicate.cs" />
-    <Compile Include="LexiconToken.cs" />
-    <Compile Include="ObjectsPreviewManager.cs" />
-    <Compile Include="ObjectsRelationManager.cs" />
-    <Compile Include="PartialAnswer.cs" />
+    <Compile Include="KeyWordSearch\keywordSearchServiceClass.cs" />
+    <Compile Include="KeyWordSearch\keywordSearchServiceInterface.cs" />
+    <Compile Include="KeyWordSearch\KwSearch.cs" />
+    <Compile Include="Q&amp;A\Language.cs" />
+    <Compile Include="Q&amp;A\Lexicon.cs" />
+    <Compile Include="Q&amp;A\LexiconLiteral.cs" />
+    <Compile Include="Q&amp;A\LexiconPredicate.cs" />
+    <Compile Include="Q&amp;A\LexiconToken.cs" />
+    <Compile Include="Relation\ObjectsPreviewManager.cs" />
+    <Compile Include="Relation\ObjectsRelationManager.cs" />
+    <Compile Include="Q&amp;A\PartialAnswer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QAServiceClass.cs" />
-    <Compile Include="QAServiceInterface.cs" />
-    <Compile Include="QueryBucket.cs" />
-    <Compile Include="QueryHandler.cs" />
-    <Compile Include="QueryProcessor.cs" />
-    <Compile Include="questionAnswer.cs" />
-    <Compile Include="relation.cs" />
-    <Compile Include="RelationGeneratorServiceClass.cs" />
-    <Compile Include="RelationGeneratorServiceInterface.cs" />
-    <Compile Include="RelFinder.cs" />
-    <Compile Include="Request.cs" />
-    <Compile Include="resourceInformation.cs" />
-    <Compile Include="ResSetToJSON.cs" />
-    <Compile Include="SPARQLQueryBuilder.cs" />
-    <Compile Include="util.cs" />
+    <Compile Include="Q&amp;A\QAServiceClass.cs" />
+    <Compile Include="Q&amp;A\QAServiceInterface.cs" />
+    <Compile Include="Q&amp;A\QueryBucket.cs" />
+    <Compile Include="UNUSED\QueryHandler.cs" />
+    <Compile Include="Utilities\QueryProcessor.cs" />
+    <Compile Include="Q&amp;A\questionAnswer.cs" />
+    <Compile Include="Relation\relation.cs" />
+    <Compile Include="Relation\RelationGeneratorServiceClass.cs" />
+    <Compile Include="Relation\RelationGeneratorServiceInterface.cs" />
+    <Compile Include="Relation\RelFinder.cs" />
+    <Compile Include="Utilities\Request.cs" />
+    <Compile Include="Comparison\resourceInformation.cs" />
+    <Compile Include="Relation\ResSetToJSON.cs" />
+    <Compile Include="Relation\SPARQLQueryBuilder.cs" />
+    <Compile Include="Utilities\util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
