renamed hatem's folder , exposed excluded uris in compare
-renamed hatem's folder
-exposed excluded uris in comparison component so that we can add the
uri from the "ExcludedPredicates.txt" in the debug folder
-there's a bug in the new database with the QA component

--- a/mergedServices/mergedServices.csproj
+++ b/mergedServices/mergedServices.csproj
@@ -73,15 +73,15 @@
     <Compile Include="Comparison\ComparisonServiceClass.cs" />
     <Compile Include="Comparison\ComparisonServiceInterface.cs" />
     <Compile Include="Relation\RelationEntity.cs" />
-    <Compile Include="Hatem\Entity.cs" />
-    <Compile Include="Hatem\FullProfile.cs" />
-    <Compile Include="Hatem\imageGrapper.cs" />
-    <Compile Include="Hatem\MicroProfile.cs" />
-    <Compile Include="Hatem\MiniProfile.cs" />
-    <Compile Include="Hatem\Profile.cs" />
-    <Compile Include="Hatem\ProfileConstructorInterface.cs" />
-    <Compile Include="Hatem\ProfileConstructorService.cs" />
-    <Compile Include="Hatem\RelationGenerator.cs" />
+    <Compile Include="Profiles\Entity.cs" />
+    <Compile Include="Profiles\FullProfile.cs" />
+    <Compile Include="Profiles\imageGrapper.cs" />
+    <Compile Include="Profiles\MicroProfile.cs" />
+    <Compile Include="Profiles\MiniProfile.cs" />
+    <Compile Include="Profiles\Profile.cs" />
+    <Compile Include="Profiles\ProfileConstructorInterface.cs" />
+    <Compile Include="Profiles\ProfileConstructorService.cs" />
+    <Compile Include="Profiles\RelationGenerator.cs" />
     <Compile Include="KeyWordSearch\keywordSearchServiceClass.cs" />
     <Compile Include="KeyWordSearch\keywordSearchServiceInterface.cs" />
     <Compile Include="KeyWordSearch\KwSearch.cs" />
@@ -98,6 +98,7 @@
     <Compile Include="Q&amp;A\QAServiceInterface.cs" />
     <Compile Include="Q&amp;A\QueryBucket.cs" />
     <Compile Include="UNUSED\QueryHandler.cs" />
+    <Compile Include="UNUSED\resourceInformation.cs" />
     <Compile Include="Utilities\QueryProcessor.cs" />
     <Compile Include="Q&amp;A\questionAnswer.cs" />
     <Compile Include="Relation\relation.cs" />
@@ -105,7 +106,6 @@
     <Compile Include="Relation\RelationGeneratorServiceInterface.cs" />
     <Compile Include="Relation\RelFinder.cs" />
     <Compile Include="Utilities\Request.cs" />
-    <Compile Include="Comparison\resourceInformation.cs" />
     <Compile Include="Relation\ResSetToJSON.cs" />
     <Compile Include="Relation\SPARQLQueryBuilder.cs" />
     <Compile Include="Utilities\util.cs" />
